src/objects/DunBradstreet__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>DunBradstreet</label>
</CustomObject>